# build-with-ai-2025

./: .gitignore  README.md  manage.py  pyproject.toml
build_with_ai/: asgi.py  settings.py  urls.py  wsgi.py
build_with_ai/templates/: base.html  navbar.html
photos/: models.py  services.py  views.py
photos/migrations/: 0001_initial.py  0002_alter_photo_tags.py
photos/templates/photos/: photo_form.html  photo_list.html  photo_list_delete_modal.html  photo_list_image_modal.html
tags/: forms.py  models.py  views.py
tags/migrations/: 0001_initial.py
tags/templates/tags/: tag_list.html
