[project]
name = "build-with-ai-2025"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-stubs>=5.1.3",
    "django-stubs-ext>=5.1.3",
    "django-widget-tweaks>=1.5.0",
    "google-cloud-vision>=3.10.1",
    "pillow>=11.1.0",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.4",
]

[tool.mypy]
strict = true
disallow_untyped_defs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "build_with_ai.settings"

[tool.ruff]
line-length = 120
indent-width = 4
exclude = ["build/", "dist/", ".venv/", "__pycache__/"]

[tool.ruff.lint]
select = ["E", "F", "I", "A", "B", "C", "N", "Q", "T"]
ignore = ["E203", "E701"]
